--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.servlet.context-path=/backend
 server.port=8080
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/ssafy?useUniCode=yes&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://localhost:3306/ssafydb?useUniCode=yes&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
 spring.datasource.username=ssafy
 spring.datasource.password=ssafy
 
