--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,6 +10,7 @@ logging.level.root=info
 logging.level.com.ssafy.finalbe.mappers=TRACE
 
 spring.jpa.show-sql=true
+#create update
 spring.jpa.hibernate.ddl-auto=none
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
