--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -21,6 +21,7 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
@@ -28,6 +29,8 @@ dependencies {
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	// https://mvnrepository.com/artifact/org.springframework/spring-test
+	testImplementation group: 'org.springframework', name: 'spring-test', version: '5.3.18'
 	// https://mvnrepository.com/artifact/com.querydsl/querydsl-jpa
 	implementation group: 'com.querydsl', name: 'querydsl-jpa', version: '4.1.4'
 	// https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
@@ -36,12 +39,12 @@ dependencies {
 	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.8.0'
 	// https://mvnrepository.com/artifact/org.javassist/javassist
 	implementation group: 'org.javassist', name: 'javassist', version: '3.27.0-GA'
-	// https://mvnrepository.com/artifact/com.querydsl/querydsl-jpa
-	implementation group: 'com.querydsl', name: 'querydsl-jpa', version: '4.1.4'
 	// https://mvnrepository.com/artifact/com.querydsl/querydsl-apt
 	implementation group: 'com.querydsl', name: 'querydsl-apt', version: '4.1.4'
 	// https://mvnrepository.com/artifact/com.corundumstudio.socketio/netty-socketio
 	implementation group: 'com.corundumstudio.socketio', name: 'netty-socketio', version: '1.7.17'
+	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api
+	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
 
 
 
