--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,17 +1,16 @@
-server.servlet.context-path=/backend
 server.port=8080
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 
+#mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/ssafydb?useUniCode=yes&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
 spring.datasource.username=ssafy
 spring.datasource.password=ssafy
 
+#logger
 logging.level.root=info
 logging.level.com.ssafy.finalbe.mappers=TRACE
 
-spring.jpa.show-sql=true
-#create update
-spring.jpa.hibernate.ddl-auto=none
-spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
-spring.main.allow-bean-definition-overriding: true
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
