--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -34,9 +34,9 @@ dependencies {
 	// https://mvnrepository.com/artifact/com.querydsl/querydsl-jpa
 	implementation group: 'com.querydsl', name: 'querydsl-jpa', version: '4.1.4'
 	// https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
-	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.8.0'
+	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
 	// https://mvnrepository.com/artifact/io.springfox/springfox-swagger2
-	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.8.0'
+	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
 	// https://mvnrepository.com/artifact/org.javassist/javassist
 	implementation group: 'org.javassist', name: 'javassist', version: '3.27.0-GA'
 	// https://mvnrepository.com/artifact/com.querydsl/querydsl-apt
@@ -44,10 +44,8 @@ dependencies {
 	implementation "org.springframework.boot:spring-boot-starter-actuator"
 	//openvidu
 	implementation group: 'io.openvidu', name: 'openvidu-java-client', version: '2.25.0'
-	// https://mvnrepository.com/artifact/com.corundumstudio.socketio/netty-socketio
-	implementation group: 'com.corundumstudio.socketio', name: 'netty-socketio', version: '1.7.17'
-	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api
-	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
+	// JWT 의존
+	implementation("com.auth0:java-jwt:3.10.3")
 
 
 
