[UPDATE]: User Entity update

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.password=ssafy
 
 #logger
 logging.level.root=info
-logging.level.com.ssafy.finalbe.mappers=TRACE
+logging.level.com.ssafy.finalbe.mappers=debug
 
 OPENVIDU_URL: http://localhost:4443/
 OPENVIDU_SECRET: MY_SECRET
