--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "click-to-react-component": "^1.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "styled-component": "^2.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
