--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 #mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://3.35.51.160:3306/ssafydb?useUniCode=yes&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://localhost:3306/ssafydb?useUniCode=yes&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
 spring.datasource.username=ssafy
 spring.datasource.password=ssafy
 
