[UPDATE]: UserRole Update & Security Configure

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8080
+server.port=5000
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
@@ -21,3 +21,4 @@ jwt.refresh-expiration=1296000000
 
 OPENVIDU_URL= https://localhost:4443/
 OPENVIDU_SECRET=MY_SECRET
+server.ssl.enabled=false
