--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,7 @@
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
-    "styled-components": "^5.3.6",
-    "vite-plugin-svgr": "^2.4.0"
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
