--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -19,11 +19,11 @@ jwt.access-expiration=600000
 # unit is ms. 15 * 24 * 60 * 60 * 1000 = 15days
 jwt.refresh-expiration=1296000000
 
-OPENVIDU_URL= https://localhost:4443/
+OPENVIDU_URL= http://localhost:4443/
 OPENVIDU_SECRET=MY_SECRET
-server.ssl.enabled= true
+server.ssl.enabled= false
 #???? ??
-server.ssl.key-store= classpath:chick-keystore.p12
-server.ssl.key-store-type=PKCS12
-server.ssl.key-store-password=ssafychick
-server.ssl.key-alias=chick-keystore
+#server.ssl.key-store= classpath:chick-keystore.p12
+#server.ssl.key-store-type=PKCS12
+#server.ssl.key-store-password=ssafychick
+#server.ssl.key-alias=chick-keystore
