--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -48,13 +48,7 @@ dependencies {
 	implementation group: 'io.openvidu', name: 'openvidu-java-client', version: '2.25.0'
 	// JWT 의존
 	implementation("com.auth0:java-jwt:3.10.3")
-
-
-
-
-
-
-
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 }
 
 tasks.named('test') {
