--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -27,3 +27,15 @@ server.ssl.enabled= false
 #server.ssl.key-store-type=PKCS12
 #server.ssl.key-store-password=ssafychick
 #server.ssl.key-alias=chick-keystore
+
+mail.smtp.auth=true
+mail.smtp.starttls.required=true
+mail.smtp.starttls.enable=true
+mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+mail.smtp.socketFactory.fallback=false
+mail.smtp.port=465
+mail.smtp.socketFactory.port=465
+
+# admin ?? ??
+AdminMail.id = kimchick207@gmail.com
+AdminMail.password = hxjxepccujrdwqeo
