--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 server.port=5000
+
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
+
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true;
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace;
 
 #mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
