[UPDATE] USERService Lazy 조건 추가

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,8 +10,8 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace;
 #mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/ssafydb?useUniCode=yes&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
-spring.datasource.username=ssafy
-spring.datasource.password=ssafy
+spring.datasource.username=root
+spring.datasource.password=1234
 
 #logger
 logging.level.root=info
