[UPDATE] properties url 변경

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,7 +9,7 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace;
 
 #mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/ssafydb?useUniCode=yes&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://3.35.166.44:3306/ssafydb?useUniCode=yes&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
 spring.datasource.username=root
 spring.datasource.password=1234
 
@@ -24,7 +24,7 @@ jwt.access-expiration=600000
 # unit is ms. 15 * 24 * 60 * 60 * 1000 = 15days
 jwt.refresh-expiration=1296000000
 
-OPENVIDU_URL= http://localhost:4443/
+OPENVIDU_URL= http://3.35.166.44:4443/
 OPENVIDU_SECRET=MY_SECRET
 server.ssl.enabled= false
 #???? ??
