--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -24,7 +24,7 @@ jwt.access-expiration=600000
 # unit is ms. 15 * 24 * 60 * 60 * 1000 = 15days
 jwt.refresh-expiration=1296000000
 
-OPENVIDU_URL= http://3.35.166.44:4443/
+OPENVIDU_URL= https://3.35.166.44:4443/
 OPENVIDU_SECRET=MY_SECRET
 server.ssl.enabled= false
 #???? ??
