--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -25,7 +25,7 @@ jwt.access-expiration=600000
 jwt.refresh-expiration=1296000000
 
 OPENVIDU_URL=http://i8b207.p.ssafy.io:4443/
-OPENVIDU_SECRET=MY_SECRET
+OPENVIDU_SECRET=CHICKUK
 server.ssl.enabled= false
 #???? ??
 #server.ssl.key-store= classpath:chick-keystore.p12
