[UPDATE] application Properties openvidu settings

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -24,7 +24,7 @@ jwt.access-expiration=600000
 # unit is ms. 15 * 24 * 60 * 60 * 1000 = 15days
 jwt.refresh-expiration=1296000000
 
-OPENVIDU_URL=http://i8b207.p.ssafy.io:4443/
+OPENVIDU_URL=https://i8b207.p.ssafy.io/
 OPENVIDU_SECRET=CHICKUK
 server.ssl.enabled= false
 #???? ??
