--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "aframe": "^1.4.1",
     "axios": "0.21.1",
     "click-to-react-component": "^1.0.8",
+    "cookie": "^0.5.0",
     "mind-ar": "^1.2.0",
     "openvidu-browser": "2.25.0",
     "react": "^18.2.0",
