--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,7 @@
 FROM nginx
 WORKDIR /home/ubuntu/S08P12B207/frontend
 RUN mkdir ./build
-ADD ./build ./build
+ADD ./dist ./dist
 RUN rm /etc/nginx/conf.d/default.conf
 COPY ./nginx.conf /etc/nginx/conf.d
 EXPOSE 443
