--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.11.6",
     "@reduxjs/toolkit": "^1.9.2",
     "axios": "0.21.1",
+    "classnames": "^2.3.2",
     "click-to-react-component": "^1.0.8",
     "cookie": "^0.5.0",
     "deepar": "^4.0.3",
