--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -24,8 +24,8 @@ jwt.access-expiration=600000
 # unit is ms. 15 * 24 * 60 * 60 * 1000 = 15days
 jwt.refresh-expiration=1296000000
 
-OPENVIDU_URL=https://i8b207.p.ssafy.io:8443/
-OPENVIDU_SECRET=CHICKUK
+OPENVIDU_URL=https://i8b207.p.ssafy.io/
+OPENVIDU_SECRET=CHICK
 server.ssl.enabled= false
 #???? ??
 #server.ssl.key-store= classpath:chick-keystore.p12
