--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "openvidu-browser": "2.25.0",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
+    "react-cookies": "^0.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.0",
     "react-icons": "^4.7.1",
