--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,7 +35,8 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.6",
-    "sweetalert2": "^11.7.1"
+    "sweetalert2": "^11.7.1",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
