--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -44,3 +44,7 @@ mail.smtp.socketFactory.port=465
 # admin ?? ??
 AdminMail.id = kimchick207@gmail.com
 AdminMail.password = hxjxepccujrdwqeo
+
+spring.application.name=chick
+management.endpoints.web.exposure.include=prometheus
+management.metrics.tags.applications=${spring.application.name}
