[ADD] AWS S3 이미지 업로드 Controller & Service & Model

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -52,6 +52,8 @@ dependencies {
 	// monitoring 시각화
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
+	//s3
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 }
 
 tasks.named('test') {
