--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -27,11 +27,6 @@ jwt.refresh-expiration=1296000000
 OPENVIDU_URL=https://i8b207.p.ssafy.io:8443/
 OPENVIDU_SECRET=CHICK
 server.ssl.enabled= false
-#???? ??
-#server.ssl.key-store= classpath:chick-keystore.p12
-#server.ssl.key-store-type=PKCS12
-#server.ssl.key-store-password=ssafychick
-#server.ssl.key-alias=chick-keystore
 
 mail.smtp.auth=true
 mail.smtp.starttls.required=true
@@ -45,6 +40,18 @@ mail.smtp.socketFactory.port=465
 AdminMail.id = kimchick207@gmail.com
 AdminMail.password = hxjxepccujrdwqeo
 
+# ?????? ?? ????
 spring.application.name=chick
 management.endpoints.web.exposure.include=prometheus
 management.metrics.tags.applications=${spring.application.name}
+
+#??? ????
+cloud.aws.credentials.access-key=AKIA3TQJQIRJPDCMIPH3
+cloud.aws.credentials.secret-key=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
+cloud.aws.s3.bucket=ssafy-chick
+cloud.aws.region.static=ap-northeast-2
+cloud.aws.stack.auto=false
+
+# multipartFile ?? ???? ??
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
