--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=9000
 
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true;
@@ -36,22 +36,22 @@ mail.smtp.socketFactory.fallback=false
 mail.smtp.port=465
 mail.smtp.socketFactory.port=465
 
-# admin ?? ??
+# admin email
 AdminMail.id = kimchick207@gmail.com
 AdminMail.password = hxjxepccujrdwqeo
 
-# ?????? ?? ????
+# monitoring
 spring.application.name=chick
 management.endpoints.web.exposure.include=prometheus
 management.metrics.tags.applications=${spring.application.name}
 
-#??? ????
+#aws cloud s3 settings
 cloud.aws.credentials.access-key=AKIA3TQJQIRJPDCMIPH3
 cloud.aws.credentials.secret-key=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
 cloud.aws.s3.bucket=ssafy-chick
 cloud.aws.region.static=ap-northeast-2
 cloud.aws.stack.auto=false
 
-# multipartFile ?? ???? ??
+# multipartFile
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
