[UPDATE] SSL TRUE

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -26,7 +26,7 @@ jwt.refresh-expiration=1296000000
 
 OPENVIDU_URL=https://i8b207.p.ssafy.io:8443/
 OPENVIDU_SECRET=CHICK
-server.ssl.enabled= false
+server.ssl.enabled=true
 
 mail.smtp.auth=true
 mail.smtp.starttls.required=true
