[UPDATE] multipart properties update

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -53,5 +53,6 @@ cloud.aws.region.static=ap-northeast-2
 cloud.aws.stack.auto=false
 
 # multipartFile
+spring.servlet.multipart.file-size-threshold=10MB
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
