--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -44,7 +44,7 @@ dependencies {
 	// https://mvnrepository.com/artifact/com.querydsl/querydsl-apt
 	implementation group: 'com.querydsl', name: 'querydsl-apt', version: '4.1.4'
 	implementation "org.springframework.boot:spring-boot-starter-actuator"
-	//openvidu
+	//opvidu
 	implementation group: 'io.openvidu', name: 'openvidu-java-client', version: '2.23.0'
 	// JWT 의존
 	implementation("com.auth0:java-jwt:3.10.3")
